# irium-wallet

./: .gitignore  App.tsx  IOS_BUILD.md  LICENSE  README.md  TESTING.md  app.json  metro.config.js  package-lock.json  package.json
.github/workflows/: build-ios-xcframework.yml
android/: .gitignore  settings.gradle
android/app/: build.gradle
docs/: native-milestones.md
modules/spv-mobile/: SpvMobile.podspec  app.plugin.js  expo-module.config.json  index.ts  package.json
rust-bridge/: Cargo.toml  README.md  build.rs
rust-bridge/.cargo/: config.toml
rust-bridge/examples/: derive_check.rs
rust-bridge/src/: android_jni.rs  ffi.rs  lib.rs  spv_mobile.udl
rust-bridge/src/mobile/: agreement.rs  light_client.rs  mod.rs  rpc_client.rs  wallet.rs
src/bridge/: http.ts  index.ts  mock.ts  secret.ts  types.ts
src/components/: AddressPicker.tsx  AddressText.tsx  AmountDisplay.tsx  Card.tsx  ConfirmModal.tsx  GradientButton.tsx  GradientText.tsx  IriumLogo.tsx  PeerIndicator.tsx  StatusBadge.tsx  SwipeableRow.tsx  TemplateCard.tsx  Toast.tsx  theme.ts
src/hooks/: useBalance.ts  usePeers.ts  useScreenEnter.ts  useSync.ts
src/navigation/: CustomTabBar.tsx  MainNavigator.tsx  MarketplaceNavigator.tsx  OnboardingNavigator.tsx  SettlementNavigator.tsx
src/screens/: AgreementDetailScreen.tsx  AuthLockScreen.tsx  DashboardScreen.tsx  DepositWizardScreen.tsx  FreelanceWizardScreen.tsx  HistoryScreen.tsx  MarketplaceScreen.tsx  MilestoneWizardScreen.tsx  OtcWizardScreen.tsx  ReceiveScreen.tsx  SendScreen.tsx  SettingsScreen.tsx  SettlementHubScreen.tsx  (+2 more)
(+30 files in other folders)
