[package]
name = "spv-mobile"
version = "0.1.0"
edition = "2021"

[lib]
name = "spv_mobile"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
# Opt-in feature for the in-project uniffi-bindgen binary. Lib/iOS/Android
# builds leave it off so clap & friends never enter the dep graph.
uniffi-cli = ["uniffi/cli"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["uniffi-cli"]

[dependencies]
irium-node-rs = { path = "../../irium-core/irium-source" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
sha2 = "0.10"
ripemd = "0.1"
bs58 = "0.4"
hmac = "0.12"
num-bigint = "0.4"
num-traits = "0.2"
k256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
bip39 = { version = "2", features = ["rand"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
uniffi = { version = "0.29" }
thiserror = "1"
rand_core = "0.6"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }
